[package]
name = "aeg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0-rc.1", features = ["cargo", "derive"]}
serde_yaml = "0.8.21"
serde = {version = "1.0", features = ["derive"]}
